# pico-tflmicro

./: .gitignore  CMakeLists.txt  README.md
examples/hello_world/: CMakeLists.txt  main_functions.cpp
examples/hello_world/rp2/: output_handler.cpp
examples/person_detection/: CMakeLists.txt  image_provider.cpp  main_functions.cpp
rp2040_hm01b0/: CMakeLists.txt
